# status-page

./: .gitignore  Cargo.toml  README.md  build-extension.sh  deploy.sh  how.html  index.html  privacy-en.html  privacy.html
extension/: background.js  i18n.js  manifest-firefox.json  manifest.json  popup.css  popup.html  popup.js
src/: app.rs  i18n.rs  main.rs  network.rs  services.rs
store-assets/: chrome-listing.md  firefox-listing.md  reviewer-notes.md
store-assets/screenshots/: README.md
