[package]
name = "status-page"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "HtmlImageElement",
    "Navigator",
    "Performance",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Storage",
    "WebSocket",
] }
gloo-net = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["wasmbind"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = 3
lto = true
